# repotools

./: CODEOWNERS  Cargo.toml  README.md  flake.nix  nixpkgs.nix  shell.nix
assets/: config.toml.j2
assets/ansible/: inventory.yaml  inventory.yaml.j2  playbook.yaml.j2
assets/ansible/roles/port_scan/tasks/: main.yaml
assets/maven/: pom.xml.j2
assets/resources/: .markdownlint.yaml  yamllint.yaml
src/: cli.rs  config.rs  http_client.rs  lib.rs  license.rs  main.rs  mgmt_license.rs  mgmt_repo.rs  readme.rs
src/app_config/: app_cache.rs  app_config.rs  mod.rs
src/cli/: cli.rs  mod.rs
src/commands/: docs.rs  init_project.rs  license.rs  linter.rs  mod.rs
src/config/: config.rs
src/extras/: extras.rs  mod.rs
src/features/: mod.rs  project_feature.rs
src/features/resources/: license.rs  linter.rs  mod.rs  watcher.rs
src/http_util/: client.rs
src/initializers/: init_project.rs  mod.rs  project_ansible.rs  project_maven.rs
src/initializers/project_types/: ansible.rs  common.rs  maven.rs  mod.rs
src/license_management/: license.rs
src/resources/: license.rs  linter.rs  mod.rs  watcher.rs
src/utils/: file_writer.rs  http_client.rs  mod.rs
templates/readme/content/: overview  usage
templates/readme/template/: readme.md
