[package]
name = "repotools"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.26"
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
#lazy_static = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.20"
xdg = "3.0.0"
config = "0.15.11"
serde_json = "1.0.140"
serde_derive = "1.0.219"
