[package]
name = "repotools"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
#hyper = { version = "1.6.0", features = ["full"] }
#tokio = { version = "1", features = ["full"] }
#http-body-util = "0.1"
#hyper-util = { version = "0.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.0"
xdg = "3.0.0"
config = "0.15.11"
serde_json = "1.0.140"
serde_derive = "1.0.219"
inquire = "0.9.0"
reqwest = "0.12.22"
